--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,29 @@
-*{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply bg-gray-300 px-3 py-2 hover:bg-gray-200;
+    }
+
+    .btn-primary {
+        @apply bg-indigo-500 text-white px-3 py-2 hover:bg-indigo-400;
+    }
+
+    .form-group {
+        @apply flex flex-col mt-2;
+    }
+
+    .form-group label {
+        @apply font-bold;
+    }
+
+    .form-group input, .form-group textarea {
+        @apply border border-gray-300 px-2 py-1;
+    }
+}
+/* *{
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -59,4 +84,4 @@
 
 .btn-primary:hover {
     background-color: rgb(13, 99, 197);
-}
+} */
