--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 @layer components {
     .btn {
@@ -23,65 +23,3 @@
         @apply border border-gray-300 px-2 py-1;
     }
 }
-/* *{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.container article h1 {
-    margin-bottom: 0;
-    border-bottom: 1px solid #ccc;
-}
-
-.container article h1 a{
-    color: #333;
-    text-decoration: none;
-}
-
-.container article p {
-    font-size: 12px;
-    margin-top: 5px;
-}
-
-.form-post {
-    gap: .5rem 0rem;
-    display: flex;
-    flex-direction: column;
-    margin: 2rem auto 0 auto;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column;
-}
-
-.btn {
-    background-color: #bbb;
-    border: 1px solid #ccc;
-    color: black;
-    font-size: 1rem;
-    padding: .3rem .5rem .3rem .5rem;
-    text-decoration: none;
-}
-
-.btn:hover {
-    background-color: #ccc;
-}
-
-.btn-primary {
-    background-color: rgb(42, 129, 230);
-    border: 1px solid rgb(42, 129, 230);
-    color: white;
-    font-size: 1rem;
-    padding: .3rem .5rem;
-    text-decoration: none;
-}
-
-.btn-primary:hover {
-    background-color: rgb(13, 99, 197);
-} */
